--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
--   repo: git://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
     hooks:
     -   id: trailing-whitespace
         exclude: '^.docker/'
@@ -25,3 +25,12 @@ repos:
         args:
         - --autofix
     -   id: requirements-txt-fixer
+- repo: https://github.com/gruntwork-io/pre-commit
+  rev: v0.1.17
+  hooks:
+    - id: shellcheck
+      exclude: '.*\.sh\.j2'
+- repo: https://github.com/igorshubovych/markdownlint-cli
+  rev: v0.32.2
+  hooks:
+    - id: markdownlint-fix
